# platsch

./: Makefile.am  README.rst  cairo.c  configure.ac  libplatsch.c  libplatsch.h  meson.build  meson_options.txt  platsch.c  platsch.h  spinner.c  spinner.conf  spinner_conf.c  spinner_conf.h
